# aon-chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pipeline.sh  pyproject.toml  run_command.sh  run_slack_bolt.sh  run_streamlit.sh  serverless.yml
.streamlit.default/: config.toml
aon_chatbot/: README.md  configs.py  main.py  repository.py  services.py  utils.py
aon_chatbot/cli/: aon_command.py  run_socket.py  run_web_server.py
aon_chatbot/database/: mongodb_cluster.py
aon_chatbot/interaction/: chatops.py
aon_chatbot/interfaces/: chat_repository_interface.py  llm_repository_interface.py
open_template_chatbot/: configs.py  llm_models.py  main.py  repository.py  services.py  utils.py
open_template_chatbot/cli/: aon_command.py  run_socket.py  run_web_server.py
open_template_chatbot/database/: mongodb_cluster.py
open_template_chatbot/interaction/: chatbot_with_gui.py  chatops.py
open_template_chatbot/interfaces/: chat_repository_interface.py  llm_repository_interface.py
tests/: test_async_mongo.py
