[project]
name = "open-template-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "myeonggil",email = "echosoul1994@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "openai (>=1.68.2,<2.0.0)",
    "groq (>=0.20.0,<0.21.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-core (>=2.33.1,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-authenticator (>=0.4.2,<0.5.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "motor (>=3.7.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
