[project]
name = "aon-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "myeonggil",email = "echosoul1994@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "openai (>=1.68.2,<2.0.0)",
    "groq (>=0.20.0,<0.21.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-core (>=2.33.1,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-authenticator (>=0.4.2,<0.5.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-async (>=0.1.1,<0.2.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=24.11.0,<25.0.0)",
    "nomic (>=3.5.1,<4.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "typer (>=0.16.0,<0.17.0)",
    "toml (>=0.10.2,<0.11.0)",
]


[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"

[project.scripts]
aon = "aon_chatbot.cli.aon_command:app"
